--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                 </div>
                 <div class="row">
                     <div class="story">
-
                         <figure class="story__shape">
                             <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Mary Smith</figcaption>
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">I had the best weekend ever with my family</h3>
@@ -224,6 +224,24 @@
                             </p>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Wow! my life is completely different now</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis odit obcaecati dolore vero
+                                perferendis consequatur consectetur, eius vel? Sapiente vero ex dolor ipsa accusantium nisi eos corrupti
+                                quia cupiditate. Illum omnis odit obcaecati dolore vero perferendis .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge  ">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
         </main>
