--- a/index.html
+++ b/index.html
@@ -254,6 +254,29 @@
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now
+                                    </h2>
+                                </div>
+                                <div class="form__group">
+                                    <input id="name" class="form__input" type="text" placeholder="Full Name" required>
+                                    <label for="name" class="form__label">Full Name</label>
+                                </div>
+                                <div class="form__group">
+                                    <input id="email" class="form__input" type="email" placeholder="Email address" required>
+                                    <label for="email" class="form__label">Email address</label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
             
