Add logo footer links and credit to footer with styling different from column styling no new sytle concepts added

--- a/index.html
+++ b/index.html
@@ -297,8 +297,28 @@
                 </div>
             </section>
         </main>
-        <footer>
-            
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        <a href="https://github.com/BrandyMello/Natours" class="footer__link">Brandy Mello</a> built my <a href="https://www.udemy.com/user/jonasschmedtmann/" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="https://www.udemy.com/user/jonasschmedtmann/" class="footer__link link__Jonas-Schmedtmann">Advanced CSS and Sass</a>. Copy &copy; by Jonas Schmedtmann.
+                    </p>
+                </div>
+            </div>
         </footer>
 
         <!-- <section class="grid-test">
