--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-
         <div class="navigation">
             <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
             <label for="navi-toggle" class="navigation__button">
@@ -22,11 +21,11 @@
             <!-- above div is background element that is just white space (&nbsp;) that will expand to the navigation list and serve as the green gradient background -->
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="" class="navigation__link"><span>01</span>About Natours</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link"><span>02</span>Your benefits</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link"><span>03</span>Popular tours</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link"><span>04</span>Stories</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link"><span>05</span>Book now</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+                    <li class="navigation__item"><a href="#stories" class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="#book" class="navigation__link"><span>05</span>Book now</a></li>
                 </ul>
             </nav>
         </div>
@@ -113,9 +112,9 @@
                     </div>
                 </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" >
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
+                    <h2 class="heading-secondary" id="section-tours">
                         Most popular tours
                     </h2>
                 </div>
@@ -148,7 +147,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -181,7 +180,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -214,17 +213,17 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="u-center-text u-margin-top-huge  ">
-                    <a href="#" class="btn btn--green">Discover all tours</a>
+                    <a href="#section-tours" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
-            <section class="section-stories">
+            <section class="section-stories" id="stories">
                 <div class="bg-video">
                     <video class="bg-video__content" autoplay muted loop>
                         <!-- autoplay only on background videos and always muted -->
@@ -272,7 +271,7 @@
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
-            <section class="section-book">
+            <section class="section-book" id="book">
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
@@ -338,6 +337,30 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour with woman boating" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour with man on mountain top" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Etiam tempor orci eu lobortis elementum nibh tellus. Dignissim sodales ut eu sem. Augue mauris augue neque
+                        gravida. Eget nullam non nisi est sit amet. Id donec ultrices tincidunt arcu non sodales neque sodales. Risus quis
+                        varius quam quisque. Quisque id diam vel quam elementum pulvinar etiam. Diam maecenas sed enim ut sem viverra aliquet
+                        eget sit. Commodo sed egestas egestas fringilla. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem.
+                        Fringilla ut morbi tincidunt augue interdum velit. Fermentum odio eu feugiat pretium nibh ipsum. Faucibus nisl tincidunt
+                        eget nullam non nisi est sit amet.
+                    </p>
+                    <a href="#book" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
 
         <!-- <section class="grid-test">
             <div class="row">
